--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -200,8 +200,8 @@ rules:
     - selector: enum
       format:
         - PascalCase
-      suffix:
-        - Enum
+      prefix:
+        - E
   '@typescript-eslint/no-explicit-any':
     - error
     - fixToUnknown: false
@@ -479,8 +479,8 @@ overrides:
         - selector: enum
           format:
             - PascalCase
-          suffix:
-            - Enum
+          prefix:
+            - E
       '@typescript-eslint/no-explicit-any': off
       '@typescript-eslint/ban-ts-comment': off
       '@typescript-eslint/unbound-method': off # Disabled as expected by jest because it has it's own version
