chore(eslint): force to have class visibility on members

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -374,6 +374,7 @@ rules:
         - const
         - let
         - var
+  '@typescript-eslint/explicit-member-accessibility': error
 overrides:
   - files:
       - '*.js'
