--- a/package.json
+++ b/package.json
@@ -98,7 +98,10 @@
     "install-git-hooks": "husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks"
   },
   "dependencies": {
-    "lodash": "4.17.21"
+    "@actions/core": "1.6.0",
+    "ansi-styles": "6.1.0",
+    "lodash": "4.17.21",
+    "terminal-link": "3.0.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "5.0.1",
