chore: migrate to parcel 2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
     "types": ["node", "jest"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "isolatedModules": true,
     "plugins": [
       {
         "transform": "ts-auto-mock/transformer",
