--- a/package.json
+++ b/package.json
@@ -58,12 +58,11 @@
     "package-lock.json",
     "README.md"
   ],
-  "main": "./src/main.ts",
+  "source": "./src/main.ts",
+  "main": "./dist/main.js",
   "scripts": {
-    "\n# RUN SCRIPTS:": "",
-    "start": "cross-env NODE_ENV=development ts-node-dev --debounce --clear --cache-directory dist-local-dev --respawn --transpile-only .",
     "\n# BUILD SCRIPTS:": "",
-    "build": "npm run clean:dist && parcel build ./src/main.ts --target node",
+    "build": "npm run clean:dist && parcel build",
     "tsc": "tsc",
     "\n# TEST SCRIPTS:": "",
     "test": "jest",
@@ -101,9 +100,13 @@
     "@actions/core": "1.6.0",
     "ansi-styles": "6.1.0",
     "lodash": "4.17.21",
-    "terminal-link": "3.0.0"
+    "terminal-link": "3.0.0",
+    "tslib": "2.3.1"
   },
   "devDependencies": {
+    "@parcel/config-default": "2.0.0",
+    "@parcel/transformer-typescript-tsc": "2.0.0",
+    "@parcel/validator-typescript": "2.0.0",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.1",
     "@semantic-release/github": "7.2.3",
@@ -139,7 +142,7 @@
     "jest-ts-auto-mock": "2.0.0",
     "lint-staged": "11.2.3",
     "node-notifier": "10.0.0",
-    "parcel-bundler": "1.12.5",
+    "parcel": "2.0.0",
     "prettier": "2.4.1",
     "rimraf": "3.0.2",
     "semantic-release": "17.4.7",
