--- a/.releaserc.json
+++ b/.releaserc.json
@@ -66,7 +66,7 @@
       {
         "assets": [
           {
-            "path": "dist/main.js",
+            "path": "dist/index.js",
             "name": "stale-${nextRelease.gitTag}.js",
             "label": "Stale v${nextRelease.gitTag} distribution"
           }
