chore: fix an issue due to imports of core

--- a/package.json
+++ b/package.json
@@ -51,12 +51,7 @@
   "files": [
     "dist/*",
     "CHANGELOG.md",
-    "CODE_OF_CONDUCT.md",
-    "CONTRIBUTING.md",
-    "LICENSE",
-    "package.json",
-    "package-lock.json",
-    "README.md"
+    "LICENSE"
   ],
   "main": "./src/main.ts",
   "scripts": {
