--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,7 @@
 {
   "*.{ts,js}": [
-    "npm run lint:ts:hook"
+    "npm run lint:ts:hook",
+    "npm run build"
   ],
   "*.{md,json,yml,html}": [
     "npm run lint:other:hook"
