chore(hooks): remove the build step from the hooks
it is not working as expected at all
better be in the CI directly anyhow

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,7 +1,6 @@
 {
   "*.{ts,js}": [
-    "npm run lint:ts:hook",
-    "npm run build"
+    "npm run lint:ts:hook"
   ],
   "*.{md,json,yml,html}": [
     "npm run lint:other:hook"
