style(github): rename the stale tester workflow name
to be shorter and more readable in the github checks

--- a/.github/workflows/stale-tester.yml
+++ b/.github/workflows/stale-tester.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   Stale:
     runs-on: ubuntu-latest
-    name: Test the stale action in dry-run mode
+    name: Run stale # Test to run the current local stale action in dry-run mode (to detect possible issues)
     steps:
       - name: Checkout
         id: checkout
