chore(cc): change the patterns to exclude
because the coverage is not 100% and yet cc says so

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -44,7 +44,6 @@ exclude_patterns:
   - 'coverage/'
   - 'node_modules/'
   - '.eslintcache'
-  - '**/*.spec.ts'
-  - '**/__mocks__/*.ts'
+  - '**.spec.ts'
   - '**/__mocks__/'
   - 'dist/'
