--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -314,12 +314,7 @@ rules:
   '@typescript-eslint/no-empty-interface':
     - error
     - allowSingleExtends: false
-  '@typescript-eslint/restrict-template-expressions':
-    - error
-    - allowNumber: false
-      allowBoolean: true
-      allowAny: false
-      allowNullish: false
+  '@typescript-eslint/restrict-template-expressions': off
   '@typescript-eslint/ban-types': error
   '@typescript-eslint/restrict-plus-operands':
     - error
