build(stale): change the github token used for the test

--- a/.github/workflows/stale-tester.yml
+++ b/.github/workflows/stale-tester.yml
@@ -17,4 +17,4 @@ jobs:
         id: stale
         uses: ./
         with:
-          github-token: 'fake-token'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
