feat(dry-run): add new input dry-run and remove the required github-token

--- a/.github/workflows/stale-tester.yml
+++ b/.github/workflows/stale-tester.yml
@@ -17,4 +17,4 @@ jobs:
         id: stale
         uses: ./
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          dry-run: true
