--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "scripts": {
     "\n# BUILD SCRIPTS:": "",
     "build": "npm run clean:dist && ncc build --license licenses.txt --source-map",
+    "build:dirty": "ncc build --license licenses.txt --source-map",
     "\n# TEST SCRIPTS:": "",
     "test": "jest",
     "test:watch": "jest --watch-all",
