--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,7 +21,9 @@ globals:
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
-  project: ./tsconfig.json
+  project:
+    - ./tsconfig.app.json
+    - ./tsconfig.spec.json
 parser: '@typescript-eslint/parser'
 plugins:
   - '@typescript-eslint'
@@ -44,7 +46,8 @@ settings:
     typescript:
       alwaysTryTypes: true
       project:
-        - ./tsconfig.json
+        - ./tsconfig.app.json
+        - ./tsconfig.spec.json
 rules:
   no-restricted-imports:
     - error
