--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,5 +4,5 @@
     "outDir": "../../out-tsc/spec",
     "types": ["jest", "node"]
   },
-  "include": ["tests", "**.*.spec.ts", "**/__mocks__"]
+  "include": ["tests", "**.*.spec.ts", "**/__mocks__", "jest"]
 }
