--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,7 +119,7 @@ jobs:
           debug: true
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-  CoverageCodecov:
+  TestsCoverageCodecov:
     needs: PreJob
     if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
     runs-on: ubuntu-latest
@@ -149,13 +149,51 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Test
-        run: npm run test:ci:coverage
+        run: npm run test:ci:coverage:integration
       - name: Coverage
         uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
           flags: integration
+          name: Stale
+  ActionCoverageCodecov:
+    needs: PreJob
+    if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version:
+          - 12.22.x
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Cache node_modules
+        if: github.event_name == 'push' || github.event_name == 'pull_request'
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - name: Install dependencies
+        run: npm ci
+      - name: Test
+        run: npm run test:ci:coverage:unit
+      - name: Coverage
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          flags: unit
           name: Stale
   Build:
     needs: PreJob
