--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,7 +119,7 @@ jobs:
           debug: true
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-  TestsCoverageCodecov:
+  IntegrationCoverageCodecov:
     needs: PreJob
     if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
     runs-on: ubuntu-latest
@@ -157,7 +157,7 @@ jobs:
           fail_ci_if_error: true
           flags: integration
           name: Stale
-  ActionCoverageCodecov:
+  UnitCoverageCodecov:
     needs: PreJob
     if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
     runs-on: ubuntu-latest
