feat(issue): add new input issue-ignore-any-labels to ignore the processing of issues with specific labels

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -14,3 +14,9 @@ jobs:
       - name: Stale
         id: stale
         uses: sonia-corporation/stale@develop
+        with:
+          issue-ignore-any-labels: |
+            frozen
+            help wanted
+            dependency-fix
+            dependencies
