--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -406,6 +406,9 @@ overrides:
       - 'plugin:jest/style'
       - 'plugin:jest/all'
     rules:
+      jest/max-nested-describe:
+        - error
+        - max: 6
       '@typescript-eslint/prefer-readonly-parameter-types': off
       jest/prefer-expect-resolves: error
       jest/prefer-to-be: error
