feat(logs): add statistics in the logs

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -49,6 +49,7 @@ settings:
         - ./tsconfig.app.json
         - ./tsconfig.spec.json
 rules:
+  '@typescript-eslint/no-inferrable-types': off
   no-restricted-imports:
     - error
     - patterns:
