--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,10 @@ inputs:
     description: 'Allow to ignore the processing of issues that contains one of those labels (multiline).'
     required: false
     default: ''
+  issue-ignore-all-assignees:
+    description: 'Allow to ignore the processing of issues that contains any assignees.'
+    required: false
+    default: 'false'
   issue-days-before-stale:
     description: 'The number of days until the issue is considered as stale.'
     required: false
