--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,10 @@ inputs:
     description: 'Allow to ignore the processing of issues that contains any assignees.'
     required: false
     default: 'false'
+  issue-ignore-any-assignees:
+    description: 'Allow to ignore the processing of issues that contains one of those assignees (multiline).'
+    required: false
+    default: ''
   issue-days-before-stale:
     description: 'The number of days until the issue is considered as stale.'
     required: false
