chore(stale): ignore stale for issues where I am assignee

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -20,3 +20,5 @@ jobs:
             help wanted
             dependency-fix
             dependencies
+          issue-ignore-any-assignees: |
+            C0ZEN
