--- a/action.yml
+++ b/action.yml
@@ -30,6 +30,10 @@ inputs:
     description: 'Allow to ignore the processing of issues that contains one of those assignees (multiline).'
     required: false
     default: ''
+  issue-ignore-all-project-cards:
+    description: 'Allow to ignore the processing of issues that contains any project cards.'
+    required: false
+    default: ''
   issue-days-before-stale:
     description: 'The number of days until the issue is considered as stale.'
     required: false
