chore(release): include the body of the commits in the relese notes
also in the changelog

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -37,6 +37,7 @@
         },
         "linkCompare": true,
         "linkReferences": true,
+        "includeDetails": true,
         "commit": "commit",
         "issue": "issues"
       }
