--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,7 @@ name: 'Stale and close'
 description: 'A GitHub action to stale and close automatically your issues and pull requests.'
 author: 'C0ZEN'
 inputs:
+  # Common inputs
   github-token:
     description: 'A GitHub token used to perform the API calls to GitHub through `@actions/github`. Usually `{{ secrets.GITHUB_TOKEN }}`.'
     required: false
@@ -10,6 +11,7 @@ inputs:
     description: 'A mode where any Data Manipulation Language will be skipped. Useful to debug safely and without risking messing up with your repository.'
     required: false
     default: 'false'
+  # Issues inputs
   issue-stale-label:
     description: 'The label that will be added to the issue when it is stale.'
     required: false
@@ -34,24 +36,69 @@ inputs:
     description: 'Allow to ignore the processing of issues that contains any project cards.'
     required: false
     default: 'false'
-  issue-days-before-stale:
-    description: 'The number of days until the issue is considered as stale.'
-    required: false
-    default: '30'
-  issue-days-before-close:
-    description: 'The number of days until a stale issue is considered as closed.'
-    required: false
-    default: '10'
   issue-ignore-before-creation-date:
     description: 'Allow to ignore the processing of issues that were created before this date (ISO 8601, see https://moment.github.io/luxon/#/parsing?id=iso-8601).'
     required: false
     default: ''
+  issue-days-before-stale:
+    description: 'The number of days until the issue is considered as stale.'
+    required: false
+    default: '30'
   issue-stale-comment:
     description: 'The comment that will be sent once the issue is stale (keep empty to not send a comment).'
     required: false
     default: ''
+  issue-days-before-close:
+    description: 'The number of days until a stale issue is considered as closed.'
+    required: false
+    default: '10'
   issue-close-comment:
     description: 'The comment that will be sent once the issue is close (keep empty to not send a comment).'
+    required: false
+    default: ''
+  # Pull request inputs
+  pull-request-stale-label:
+    description: 'The label that will be added to the pull request when it is stale.'
+    required: false
+    default: 'stale'
+  pull-request-ignore-all-labels:
+    description: 'Allow to ignore the processing of pull requests that contains any labels.'
+    required: false
+    default: 'false'
+  pull-request-ignore-any-labels:
+    description: 'Allow to ignore the processing of pull requests that contains one of those labels (multiline).'
+    required: false
+    default: ''
+  pull-request-ignore-all-assignees:
+    description: 'Allow to ignore the processing of pull requests that contains any assignees.'
+    required: false
+    default: 'false'
+  pull-request-ignore-any-assignees:
+    description: 'Allow to ignore the processing of pull requests that contains one of those assignees (multiline).'
+    required: false
+    default: ''
+  pull-request-ignore-all-project-cards:
+    description: 'Allow to ignore the processing of pull requests that contains any project cards.'
+    required: false
+    default: 'false'
+  pull-request-ignore-before-creation-date:
+    description: 'Allow to ignore the processing of pull requests that were created before this date (ISO 8601, see https://moment.github.io/luxon/#/parsing?id=iso-8601).'
+    required: false
+    default: ''
+  pull-request-days-before-stale:
+    description: 'The number of days until the pull request is considered as stale.'
+    required: false
+    default: '30'
+  pull-request-stale-comment:
+    description: 'The comment that will be sent once the pull request is stale (keep empty to not send a comment).'
+    required: false
+    default: ''
+  pull-request-days-before-close:
+    description: 'The number of days until a stale pull request is considered as closed.'
+    required: false
+    default: '10'
+  pull-request-close-comment:
+    description: 'The comment that will be sent once the pull request is close (keep empty to not send a comment).'
     required: false
     default: ''
 runs:
